Fix alignment errors with the search and category fields in the e-commerce plugin.

--- a/less/plugins/ecommerce/ecommerce-categories.less
+++ b/less/plugins/ecommerce/ecommerce-categories.less
@@ -20,11 +20,7 @@
 // ------------------------------
 
 .category-list {
-    margin: 0;
-
-    @media @tablet-horizontal {
-        margin: 0 -0.5%;
-    }
+	margin: 0 -0.5%;
 
     @media @tablet {
         margin: 0 -1%;
@@ -42,10 +38,11 @@
 .ecomcategorieslist__category-item {
     float: left;
     list-style: none;
+	margin: 0 0.5% 1%;
+	padding: 0;
 
     @media @tablet-horizontal {
         width: 32.3%;
-		margin: 0 0.5% 1%;
     }
 
     @media @tablet {
