--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -155,8 +155,12 @@
 		
 		.ecomproductslist__button,
 		.ecomproductslist__button--clear {
-			width: 100%;
-			text-align: center;
+			.transition(none);
+			
+			@media @mobile {
+				width: 100%;
+				text-align: center;
+			}
 		}
     }
 
@@ -299,6 +303,7 @@
 			@media @tablet-horizontal {
 				.select.medium;
 			}
+			
 			@media @mobile {
 				.select.small;
 			}
@@ -356,7 +361,6 @@
     -webkit-align-items: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
-    //border-top: 1px solid fade(@color__p--text, 16%);
 	
 	.responsivecolumns & {
 		border-left: 1px solid rgba(66,77,81,0.16);
@@ -379,8 +383,6 @@
 // ------------------------------
 
 .product-item {
-    //border-right: 1px solid fade(@color__p--text, 16%);
-	//.box-shadow(inset 0px -1px 0px 0px fade(@color__p--text, 16%));
 	padding: 0;
 	width: 32.3333%;
 	margin-right: 1.5%;
