--- a/less/plugins/ecommerce/ecommerce-product.less
+++ b/less/plugins/ecommerce/ecommerce-product.less
@@ -16,14 +16,6 @@
 // #Product
 // ------------------------------
 
-.ecomproduct {
-
-}
-
-.ecomproduct__button {
-    
-}
-
 // Product Article
 
 .product-article {
@@ -49,29 +41,11 @@
     padding: 1px 0;
 }
 
-// Product Image
-
-.product-image {
-	.image-link {
-		
-	}
-}
-
 // ------------------------------
 // #Product Image
 // ------------------------------
 
 .product-image {
-	
-    @media @tablet-horizontal {
-    }
-    @media @tablet {
-    }
-
-    body.product-one-image & {
-		margin-left: 70px;
-    }
-
     &.no-image {
         display: none;
     }
